# stdlib

./: .gitignore  CMakeLists.txt  build.sh  build_test_array.sh  build_test_array_gf.sh  build_test_array_lf.sh  build_test_gf.sh  build_test_lf.sh
config/: DefaultFlags.cmake
example/: CMakeLists.txt
example/math/: CMakeLists.txt
example/specialfunctions_gamma/: example_gamma.f90
example/stats/: CMakeLists.txt  example_mean.f90  example_var.f90
example/strings/: example_padl.f90  example_padr.f90  example_replace_all.f90  example_to_string.f90  example_zfill.f90
src/: CMakeLists.txt  common.fypp  stdlib_array.f90  stdlib_ascii.fypp  stdlib_error.f90  stdlib_hash_32bit.fypp  stdlib_hash_64bit.fypp  stdlib_hash_64bit_fnv.fypp  stdlib_hashmap_wrappers.f90  (+28 more)
test/: CMakeLists.txt
test/array/: test_logicalloc.f90
test/ascii/: test_ascii.f90
test/io/: CMakeLists.txt  test_loadtxt.f90  test_npy.f90  test_parse_mode.f90
test/linalg/: CMakeLists.txt  test_linalg.fypp
test/math/: CMakeLists.txt  test_stdlib_math.fypp
test/optval/: test_optval.fypp
test/quadrature/: CMakeLists.txt
test/selection/: test_selection.fypp
test/sorting/: CMakeLists.txt  test_sorting.f90  test_sorting_bitsets.f90
test/specialfunctions/: test_specialfunctions_gamma.fypp
test/stats/: CMakeLists.txt  test_corr.f90  test_cov.f90  test_mean.fypp  test_moment.f90  test_var.f90
test/string/: CMakeLists.txt  test_string_assignment.fypp  test_string_functions.f90  test_string_intrinsic.f90  test_string_match.f90  test_string_strip_chomp.f90  test_string_to_string.f90
(+4 files in other folders)
